[package]
name = "myos-kernel"
version = "0.1.0"
authors = ["Philippe Leblond <leblond.philippe@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0.4"
bootloader = { version = "0.9.10", features = ["map_physical_memory"]}
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"

[profile.release]
lto = true
